<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <!-- Forhåndsvisning av bilde -->
        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="75dp"
            android:contentDescription="Preview Image" />

        <!-- Tekstfelt for inntasting av navn -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="Matching name for image" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Knapper for å legge til bilde og bekrefte -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Knapp for å velge bilde -->
            <Button
                android:id="@+id/btnChooseImage"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="Add Image" />

            <!-- Knapp for å legge til bilde -->
            <Button
                android:id="@+id/btnAddImage"
                android:layout_marginTop="20dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Add" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
